--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^2.4.1",
+    "mongoose": "^5.9.29",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
