--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^2.4.1",
     "mongoose": "^5.9.29",
     "next": "9.5.2",
+    "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
