--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.5.2",
     "next-connect": "^0.8.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.3.0"
   }
 }
