--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "framer-motion": "^2.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
     "next": "9.5.2",
     "next-connect": "^0.8.1",
