--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
     "swr": "^0.3.0"
   }
 }
