--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1",
     "swr": "^0.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.11.1"
   }
 }
