--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.16.1",
     "bcrypt": "^5.0.0",
     "framer-motion": "^2.4.1",
+    "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
     "next": "9.5.2",
