--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-datasource-mongodb": "^0.2.8",
     "apollo-server-micro": "^2.16.1",
     "bcrypt": "^5.0.0",
     "framer-motion": "^2.4.1",
