--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-datasource-mongodb": "^0.2.8",
     "apollo-server-micro": "^2.16.1",
     "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
     "framer-motion": "^2.4.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.0",
