react-modal, and audit fix

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "cookie": "^0.4.1",
     "framer-motion": "^2.4.1",
     "graphql": "^15.3.0",
-    "graphql-tools": "^6.2.0",
+    "graphql-tools": "^6.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
     "next": "9.5.2",
     "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
     "swr": "^0.3.0"
   },
