--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "apollo-datasource-mongodb": "^0.2.8",
     "apollo-server-micro": "^2.16.1",
     "bcrypt": "^5.0.0",
