--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
     "swr": "^0.3.0"
