--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
-    "styled-components": "^5.1.1",
-    "swr": "^0.3.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.11.1"
