--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^2.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.11",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
