--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
+    "express-session": "^1.17.1",
     "framer-motion": "^2.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.11",
     "next": "9.5.2",
+    "next-connect": "^0.9.1",
+    "passport": "^0.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
