--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.11",
-    "next": "9.5.2",
+    "next": "^10.0.5",
     "next-connect": "^0.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
