--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.10.11",
     "next": "^10.0.5",
     "next-connect": "^0.9.1",
+    "nprogress": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "16.13.1",
